# open_banking_ckks

./: CMakeLists.txt  LICENSE  README.md  bank_app.cpp  run_build.sh
